<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


   <ImageView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:id="@+id/QR_Image"
       android:layout_centerInParent="true"
       android:contentDescription="@string/qr_code"
       />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_value"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:inputType="text"
        android:contentDescription="@string/content_of_qr_code"
        android:autofillHints="@string/content_of_qr_code"
        android:textAlignment="center"
        android:textColorLink="@color/colorPrimaryDark"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/save"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:text="@string/save"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/create"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/create"/>

</RelativeLayout>