<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="100"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="33"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="25dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_qr_code"
                android:id="@+id/createButton"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:background="@drawable/rounded_button"
                />


        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="33"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp">

            <Button
                android:id="@+id/scanButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scan_qr_code"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:background="@drawable/rounded_button"/>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="33"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="25dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/import_qr_code"
                android:id="@+id/importButton"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:background="@drawable/rounded_button"
                />


        </RelativeLayout>





    </LinearLayout>



</RelativeLayout>